<resources>
    <string name="app_name" translatable="false">Explr</string>
    <string name="permissions_denied_error">Looks like you did not give permissions, without permissions application can\'t access files and work properly. Please give permissions to continue with the application.</string>
    <string name="no_permissions_rationale">This application is a File Explorer, it needs permissions to access your files to work. Without this permission application can\'t perform any of its functions. To continue work with our application you need to grant this permission.</string>
    <string name="give_permissions_button">Grant permissions</string>
    <string name="sort_by_creation_title">by creation time</string>
    <string name="videos_root">Videos</string>
    <string name="audio_root">Audio</string>
    <string name="no_sort_title">by default</string>
    <string name="sort_by_name_title">by filename</string>
    <string name="sort_by_type_title">by file type</string>
    <string name="sort_by_size_title">by size</string>
    <string name="sort_by_modified_title">by modify time</string>
    <string name="documents_root">Documents</string>
    <string name="images_root">Images</string>
    <string name="internal_storage_root">Internal Storage</string>
    <string name="downloads_root">Downloads</string>
    <string name="recent_root">Recent</string>
    <string name="no_root">Undefined</string>
    <string name="month_january">January</string>
    <string name="month_february">February</string>
    <string name="month_march">March</string>
    <string name="month_april">April</string>
    <string name="month_may">May</string>
    <string name="month_june">June</string>
    <string name="month_july">July</string>
    <string name="month_august">August</string>
    <string name="month_september">September</string>
    <string name="month_october">October</string>
    <string name="month_november">November</string>
    <string name="month_december">December</string>
    <string name="file_size_placeholder">%1$dKb</string>
    <string name="month_day_placeholder">%1$s %2$d</string>
    <string name="sort_by_title">Sort by…</string>
    <string name="close">Close</string>
    <string name="drawer_header">Files</string>
    <string name="share_title">Share</string>
    <string name="delete_title">Delete</string>
    <string name="reverse_items_title">Reverse order</string>
    <string name="show_hidden_files_title">Show hidden files</string>
    <string name="show_nomedia_files_title">Show .nomedia files in the Categories</string>
    <string name="details_title">Details</string>
    <string name="directory_type">Directory</string>
    <string name="file_type">File</string>
    <string name="video_type">Video</string>
    <string name="image_type">Image</string>
    <string name="audio_type">Audio</string>
    <string name="document_type">Document</string>
    <string name="filename_details_placeholder">Filename: %1$s</string>
    <string name="size_details_placeholder">Size: %1$dKb</string>
    <string name="last_modified_details_placeholder">Last modified: %1$s %2$d</string>
    <string name="mime_type_details_placeholder">MIME type: %1$s</string>
    <string name="file_type_details_placeholder">File type: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="changes_in_files">Changes in files</string>
    <string name="diffs_root">Changes</string>
    <string name="new_files_title">New</string>
    <string name="old_files_title">Old</string>
    <string name="changed_files_title">Changed</string>
    <string name="deleted_files_title">Deleted</string>
    <string name="processing_files_title">Processing</string>
    <string name="undefined">Undefined</string>
</resources>