<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/reverse_item"
        android:checkable="true"
        android:icon="@drawable/sort_icon_foreground"
        android:title="@string/reverse_items_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/hidden_item"
        android:checkable="true"
        android:title="@string/show_hidden_files_title" />
    <item
        android:id="@+id/nomedia_item"
        android:checkable="true"
        android:title="@string/show_nomedia_files_title" />
    <item
        android:id="@+id/sorting_item"
        android:checkable="false"
        android:title="@string/sort_by_title" />
</menu>